--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,3 +1,12 @@
-<section>
-    <h2></h2>
+<section
+    class="relative flex flex-col items-center justify-center h-screen text-center p-4 bg-gradient-to-r from-cyan-800 to-blue-500 overflow-hidden bg-(https://www.pexels.com/es-es/foto/persona-gente-creativo-edificio-6615294/)"
+>
+    <h2 class="text-2xl text-white uppercase">Innovación + Finanzas</h2>
+    <a>
+        <button
+            class="mt-4 px-6 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition"
+        >
+            Contáctame
+        </button>
+    </a>
 </section>
