--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -25,7 +25,7 @@ if (!post) {
 const { Content, headings } = await render(post);
 ---
 
-<Layout title={post.data.title} date={post.data.date} author={post.data.author}>
+<Layout title={post.data.title} date={post.data.date} author={post.data.author} description={post.data.description}>
 <div class="prose">
   <Content />
 </div>
