--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import HeroSection from '../components/HeroSection.astro';
 layout: Layout;
 ---
 <Layout title="Innovacion y Finanzas">
-		
+		<HeroSection/>
 </Layout>
