--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -16,14 +16,14 @@ const { title = "Blog" } = Astro.props;
 <meta property="og:url" content="https://www.30thopps.com/">
 <meta property="og:title" content="30th Opps - Innovación en Software, Contabilidad y Finanzas">
 <meta property="og:description" content="30th Opps ofrece desarrollo de software, contabilidad y servicios financieros en Costa Rica. Soluciones innovadoras para tu negocio.">
-<meta property="og:image" content="https://www.30thopps.com/images/og-image.png">
+<meta property="og:image" content="https://darce.vercel.app/og-image.png">
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:url" content="https://www.30thopps.com/">
 <meta name="twitter:title" content="30th Opps - Innovación en Software, Contabilidad y Finanzas">
 <meta name="twitter:description" content="30th Opps ofrece desarrollo de software, contabilidad y servicios financieros en Costa Rica. Soluciones innovadoras para tu negocio.">
-<meta name="twitter:image" content="https://www.30thopps.com/images/og-image.png">
+<meta name="twitter:image" content="https://darce.vercel.app/og-image.png">
   </head>
   <body class="bg-gray-50 text-gray-900 font-sans">
 <PageHeader />
