added service section

--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -46,7 +46,7 @@ const { title, date, author, description } = Astro.props;
 
     <footer class="bg-white shadow mt-12">
       <div class="max-w-7xl mx-auto px-6 py-6 text-center text-gray-500 text-sm">
-        &copy; {new Date().getFullYear()} Mi Blog. Todos los derechos reservados.
+        &copy; {new Date().getFullYear()} 30th Opps Blog. Todos los derechos reservados.
       </div>
     </footer>
   </body>
