--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,12 +1,13 @@
 <section
-    class="relative flex flex-col items-center justify-center h-screen text-center p-4 bg-gradient-to-r from-cyan-800 to-blue-500 overflow-hidden bg-(https://www.pexels.com/es-es/foto/persona-gente-creativo-edificio-6615294/)"
+    class="relative flex flex-col items-center justify-center h-screen text-center p-4 bg-gradient-to-r from-cyan-800 to-blue-500 overflow-hidden bg-linear-r from-green-400 to-cyan-700"
 >
-    <h2 class="text-2xl text-white uppercase">Innovación + Finanzas</h2>
-    <a>
+    <h2 class="text-4xl text-white uppercase">Innovación + Finanzas</h2>
+    <h3 class="text-2xl text-white uppercase">Soluciones en tecnologia y finanzas para tu empresa</h3>
+    <a href="#contact" class="z-10">
         <button
-            class="mt-4 px-6 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition"
+            class="mt-4 px-6 py-4 bg-blue-600 text-white rounded hover:bg-blue-700 transition"
         >
-            Contáctame
+            Conversemos de tu negocio
         </button>
     </a>
 </section>
