--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import HeroSection from '../components/HeroSection.astro';
+import ServiceSection from '../components/ServicesSection.astro';
 layout: Layout;
 ---
 <Layout title="Innovacion y Finanzas">
 		<HeroSection/>
+		<ServiceSection/>
 </Layout>
