--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,6 +10,7 @@ import PageHeader from '../components/PageHeader.astro';
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="title" content="30th Opps - Innovación en Software, Contabilidad y Finanzas">
 <meta name="description" content="30th Opps ofrece desarrollo de software, contabilidad y servicios financieros en Costa Rica. Soluciones innovadoras para tu negocio.">
+<meta name="keywords" content="30th Opps, software, contabilidad, finanzas, Costa Rica, desarrollo de software, servicios financieros, soluciones tecnológicas"/>
 
 <!-- Open Graph / Facebook / LinkedIn -->
 <meta property="og:type" content="website">
