--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -10,6 +10,7 @@ const { title = "Blog" } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>{title ? `${title} | 30th Opps` : "30th Oppps"}</title>
 <meta name="description" content="30th Opps ofrece desarrollo de software, contabilidad y servicios financieros en Costa Rica. Soluciones innovadoras para tu negocio.">
+<meta name="keywords" content="30th Opps, software, contabilidad, finanzas, Costa Rica, desarrollo de software, servicios financieros, soluciones tecnológicas"/>
 
 <!-- Open Graph / Facebook / LinkedIn -->
 <meta property="og:type" content="website">
