--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Layout from '../layouts/Layout.astro';
 import HeroSection from '../components/HeroSection.astro';
 import ServiceSection from '../components/ServicesSection.astro';
+import BlogCarussel from '../components/BlogCarussel.astro';
 layout: Layout;
 ---
 <Layout title="Innovacion y Finanzas">
 		<HeroSection/>
 		<ServiceSection/>
+		<BlogCarussel/>
 </Layout>
