--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -14,9 +14,9 @@ const {
 
 const nav = [
     { name: "Inicio", href: "/" },
-    { name: "Servicios", href: "/servicios" },
+    { name: "Servicios", href: "/#services" },
     { name: "Blog", href: "/blog" },
-    { name: "Contacto", href: "/contacto" },
+    { name: "Contacto", href: "/#contacto" },
 ];
 ---
 
