--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -1,4 +1,4 @@
-<section class="py-40 px-6 bg-gray-100">
+<section id="services" class="py-40 px-6 bg-gray-100">
     <h2 class="text-2xl text-black uppercase mb-4">Servicios</h2>
     <div class="flex flex-row md:flex-row gap-6">
         <article class="shadow shadow-md px-2 py-3" >
