--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Layout from '../layouts/Layout.astro';
 import HeroSection from '../components/HeroSection.astro';
 import ServiceSection from '../components/ServicesSection.astro';
 import BlogCarussel from '../components/BlogCarussel.astro';
+import ContactSection from '../components/ContactSection.astro';
 layout: Layout;
 ---
 <Layout title="Innovacion y Finanzas">
 		<HeroSection/>
 		<ServiceSection/>
 		<BlogCarussel/>
+		<ContactSection/>
 </Layout>
