added footer to all pages

--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import PageHeader from "../components/PageHeader.astro";
+import FooterSection from '../components/FooterSection.astro';
 const { title, date, author, description } = Astro.props;
 ---
 <html lang="es">
@@ -45,10 +46,6 @@ const { title, date, author, description } = Astro.props;
       </article>
     </main>
 
-    <footer class="bg-white shadow mt-12">
-      <div class="max-w-7xl mx-auto px-6 py-6 text-center text-gray-500 text-sm">
-        &copy; {new Date().getFullYear()} 30th Opps Blog. Todos los derechos reservados.
-      </div>
-    </footer>
+    <FooterSection/>
   </body>
 </html>
