--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,5 +1,5 @@
 <section
-    class="relative flex flex-col items-center justify-center h-screen text-center p-4 bg-gradient-to-r from-cyan-800 to-blue-500 overflow-hidden bg-linear-r from-green-400 to-cyan-700"
+    class="bg-gradient-to-r from-cyan-400 to-blue-700 relative flex flex-col items-center justify-center h-screen text-center p-4 overflow-hidden"
 >
     <h2 class="text-4xl text-white uppercase">Innovación + Finanzas</h2>
     <h3 class="text-2xl text-white uppercase">Soluciones en tecnologia y finanzas para tu empresa</h3>
