--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css';
 import PageHeader from '../components/PageHeader.astro';
+import FooterSection from '../components/FooterSection.astro';
 const { title = "Blog" } = Astro.props;
 ---
 <html lang="es">
@@ -40,11 +41,6 @@ const { title = "Blog" } = Astro.props;
         <slot />
       </section>
     </main>
-
-    <footer class="bg-white shadow mt-12">
-      <div class="max-w-7xl mx-auto px-6 py-6 text-center text-gray-500 text-sm">
-        &copy; {new Date().getFullYear()} 30th Opps Blog. Todos los derechos reservados.
-      </div>
-    </footer>
+<FooterSection/>
   </body>
 </html>
