--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,36 +1,64 @@
 ---
-const {title} = Astro.props;
-import PageHeader from '../components/PageHeader.astro';
+const { title } = Astro.props;
+import PageHeader from "../components/PageHeader.astro";
+import FooterSection from '../components/FooterSection.astro';
 ---
+
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{title ? `${title} | 30th Opps` : "30th Oppps"}</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="title" content="30th Opps - Innovación en Software, Contabilidad y Finanzas">
-<meta name="description" content="30th Opps ofrece desarrollo de software, contabilidad y servicios financieros en Costa Rica. Soluciones innovadoras para tu negocio.">
-<meta name="keywords" content="30th Opps, software, contabilidad, finanzas, Costa Rica, desarrollo de software, servicios financieros, soluciones tecnológicas"/>
+    <meta
+      name="title"
+      content="30th Opps - Innovación en Software, Contabilidad y Finanzas"
+    />
+    <meta
+      name="description"
+      content="30th Opps ofrece desarrollo de software, contabilidad y servicios financieros en Costa Rica. Soluciones innovadoras para tu negocio."
+    />
+    <meta
+      name="keywords"
+      content="30th Opps, software, contabilidad, finanzas, Costa Rica, desarrollo de software, servicios financieros, soluciones tecnológicas"
+    />
 
-<!-- Open Graph / Facebook / LinkedIn -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://www.30thopps.com/">
-<meta property="og:title" content="30th Opps - Innovación en Software, Contabilidad y Finanzas">
-<meta property="og:description" content="30th Opps ofrece desarrollo de software, contabilidad y servicios financieros en Costa Rica. Soluciones innovadoras para tu negocio.">
-<meta property="og:image" content="https://darce.vercel.app/og-image.png">
+    <!-- Open Graph / Facebook / LinkedIn -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.30thopps.com/" />
+    <meta
+      property="og:title"
+      content="30th Opps - Innovación en Software, Contabilidad y Finanzas"
+    />
+    <meta
+      property="og:description"
+      content="30th Opps ofrece desarrollo de software, contabilidad y servicios financieros en Costa Rica. Soluciones innovadoras para tu negocio."
+    />
+    <meta property="og:image" content="https://darce.vercel.app/og-image.png" />
 
-<!-- Twitter -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://www.30thopps.com/">
-<meta name="twitter:title" content="30th Opps - Innovación en Software, Contabilidad y Finanzas">
-<meta name="twitter:description" content="30th Opps ofrece desarrollo de software, contabilidad y servicios financieros en Costa Rica. Soluciones innovadoras para tu negocio.">
-<meta name="twitter:image" content="https://darce.vercel.app/og-image.png">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://www.30thopps.com/" />
+    <meta
+      name="twitter:title"
+      content="30th Opps - Innovación en Software, Contabilidad y Finanzas"
+    />
+    <meta
+      name="twitter:description"
+      content="30th Opps ofrece desarrollo de software, contabilidad y servicios financieros en Costa Rica. Soluciones innovadoras para tu negocio."
+    />
+    <meta
+      name="twitter:image"
+      content="https://darce.vercel.app/og-image.png"
+    />
   </head>
   <body>
-<PageHeader companyName="30th Opps" />
-      <main>
-        <slot /> <!-- your content is injected here -->
-</main>
+    <PageHeader companyName="30th Opps" />
+    <main>
+      <slot />
+      <!-- your content is injected here -->
+    </main>
+<FooterSection/>
   </body>
   <style>
     h1 {
