--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -1,6 +1,6 @@
 <section id="services" class="py-40 px-6 bg-gray-100">
     <h2 class="text-2xl text-black uppercase mb-4">Servicios</h2>
-    <div class="flex flex-row md:flex-row gap-6">
+    <div class="flex flex-col md:flex-row gap-6">
         <article class="shadow shadow-md px-2 py-3" >
             <h3 class="text-xl text-black uppercase mb-2">Desarrollo Web</h3>
             <p class="text-gray-700">
