--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,13 +14,8 @@ import FooterSection from '../components/FooterSection.astro';
       name="title"
       content="30th Opps - Innovación en Software, Contabilidad y Finanzas"
     />
-    <meta
-      name="description"
-      content="30th Opps ofrece desarrollo de software, contabilidad y servicios financieros en Costa Rica. Soluciones innovadoras para tu negocio."
-    />
-    <meta
-      name="keywords"
-      content="30th Opps, software, contabilidad, finanzas, Costa Rica, desarrollo de software, servicios financieros, soluciones tecnológicas"
+    <meta name="description" content="30th Opps ofrece desarrollo de software, contabilidad y servicios financieros en Costa Rica. Soluciones innovadoras para tu negocio."/>
+    <meta name="keywords" content="30th Opps, software, contabilidad, finanzas, Costa Rica, desarrollo de software, servicios financieros, soluciones tecnológicas"
     />
 
     <!-- Open Graph / Facebook / LinkedIn -->
