--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -39,7 +39,7 @@ const { title, date, author, description, keywords } = Astro.props;
           </p>
         </header>
 
-        <div class="prose prose-lg max-w-full text-gray-800">
+        <div class="max-w-full text-gray-800">
           <slot />
         </div>
       </article>
