--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -26,7 +26,7 @@ const { Content, headings } = await render(post);
 ---
 
 <Layout title={post.data.title} date={post.data.date} author={post.data.author} description={post.data.description} keywords={post.data.keywords}>
-<div class="prose">
-  <Content />
-</div>
+  <div class="prose prose-lg text-justify">
+    <Content />
+  </div>
 </Layout>
