fix service section css

--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -19,7 +19,7 @@
                 Brindamos asesoramiento experto para optimizar la gestión financiera de tu empresa, ayudándote a tomar decisiones informadas.
             </p>
         </article>
-        <article class="sshadow-md px-2 py-3"> 
+        <article class="shadow-md px-2 py-3"> 
             <h3 class="text-xl text-black uppercase mb-2">Automatización de Procesos</h3>
             <p class="text-gray-700">
                 Implementamos soluciones tecnológicas para automatizar tareas repetitivas, mejorando la eficiencia operativa de tu negocio.
