--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -3,7 +3,7 @@
 >
     <h2 class="text-4xl text-white uppercase">Innovación + Finanzas</h2>
     <h3 class="text-2xl text-white uppercase">Soluciones en tecnologia y finanzas para tu empresa</h3>
-    <a href="#contact" class="z-10">
+    <a href="#contacto" class="z-10">
         <button
             class="mt-4 px-6 py-4 bg-blue-600 text-white rounded hover:bg-blue-700 transition"
         >
