--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -26,7 +26,7 @@ const { Content, headings } = await render(post);
 ---
 
 <Layout title={post.data.title} date={post.data.date} author={post.data.author} description={post.data.description} keywords={post.data.keywords}>
-  <div class="prose prose-lg text-justify">
+  <div class="prose prose-xl max-w-none">
     <Content />
   </div>
 </Layout>
