--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -7,7 +7,7 @@ interface Props {
 }
 
 const {
-    logoSrc = "/logo.svg",
+    logoSrc = "/logo.png",
     companyName = "30th Opps",
     currentPath = "/",
 } = Astro.props;
