--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import ServiceSection from '../components/ServicesSection.astro';
 import BlogCarussel from '../components/BlogCarussel.astro';
 import ContactSection from '../components/ContactSection.astro';
 ---
-<Layout title="Innovacion y Finanzas">
+<Layout>
 		<HeroSection/>
 		<ServiceSection/>
 		<BlogCarussel/>
