--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -9,23 +9,23 @@ const { title, date, author, description, keywords } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>{title}</title>
+    <title>{title} - Daniel C. Arce</title>
     <meta name="description" content={description}/>
     <meta name="keywords" content={keywords.join()}/>
 
 <!-- Open Graph / Facebook / LinkedIn -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://www.30thopps.com/">
-<meta property="og:title" content="30th Opps - Innovación en Software, Contabilidad y Finanzas">
-<meta property="og:description" content="30th Opps ofrece desarrollo de software, contabilidad y servicios financieros en Costa Rica. Soluciones innovadoras para tu negocio.">
-<meta property="og:image" content="https://darce.vercel.app/og-image.png">
+<meta property="og:url" content="https://www.danielcarce.com/">
+<meta property="og:title" content="Daniel C. Arce - Accountant & Fullstack Developer">
+<meta property="og:description" content="Daniel C. Arce es un desarrollador de software fullstack y contador privado especializado en resolución problemas.">
+<meta property="og:image" content="https://danielcarce.com/og-image.png">
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://www.30thopps.com/">
-<meta name="twitter:title" content="30th Opps - Innovación en Software, Contabilidad y Finanzas">
-<meta name="twitter:description" content="30th Opps ofrece desarrollo de software, contabilidad y servicios financieros en Costa Rica. Soluciones innovadoras para tu negocio.">
-<meta name="twitter:image" content="https://darce.vercel.app/og-image.png">
+<meta name="twitter:url" content="https://www.danielcarce.com/">
+<meta name="twitter:title" content="Daniel C. Arce - Accountant & Fullstack Developer">
+<meta name="twitter:description" content="Daniel C. Arce es un desarrollador de software fullstack y contador privado especializado en resolución problemas.">
+<meta name="twitter:image" content="https://danielcarce.com/og-image.png">
   </head>
   <body class="bg-gray-50 text-gray-900 font-sans">
 <PageHeader/>
