Gtag on All Layouts

--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -10,6 +10,20 @@ const { title, date, author, description, keywords } = Astro.props;
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>{title} - Daniel C. Arce</title>
+     <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-K6TKKCBL");
+    </script>
+    <!-- End Google Tag Manager -->
     <meta name="description" content={description}/>
     <meta name="keywords" content={keywords.join()}/>
 
@@ -28,6 +42,15 @@ const { title, date, author, description, keywords } = Astro.props;
 <meta name="twitter:image" content="https://danielcarce.com/og-image.png">
   </head>
   <body class="bg-gray-50 text-gray-900 font-sans">
+     <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-K6TKKCBL"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"></iframe></noscript
+    >
+    <!-- End Google Tag Manager (noscript) -->
 <PageHeader/>
     <main class="max-w-5xl mx-auto px-6 py-12 prose">
       <article class="bg-white rounded-lg shadow p-8">
